# geo-loc

./: Cargo.toml  LICENSE  Makefile  README.md  geo-loc.1  install.sh  uninstall.sh
resources/: geo-loc.desktop
src/: args.rs  location.rs  main.rs
src/providers/: corelocation.rs  mod.rs
