[package]
name = "geo-loc"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Divan Visagie <me@divanv.com>"]
description = "A command-line tool to print the host's geographic location in pipe-friendly formats"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
