[package]
name = "geo-loc"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Divan Visagie <me@divanv.com>"]
description = "A command-line tool to print the host's geographic location in pipe-friendly formats"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
zbus = "3.14"
zvariant = "3.15"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
